--- a/index.html
+++ b/index.html
@@ -10,9 +10,8 @@
 <body>
     <header>
       <nav class="navigation">
-        <div class="logo">
-        <img src="Favicon.png" alt="logo">
-        </div>>
+        <img class="imag" src="android-chrome-512x512.png" alt="logo">
+    
         <div class="sidebars">
         <a href="#"><strong>Home</strong></a>
         <a href="#"><strong>Features</strong></a>
